--- a/framework/assets/css/themeblvd.css
+++ b/framework/assets/css/themeblvd.css
@@ -5121,6 +5121,9 @@ blockquote p:last-of-type {
 blockquote small {
 	margin-top: 5px;
 }
+.featured-quote blockquote {
+	float: none !important;
+}
 
 /* =Media (media.php)
 -----------------------------------------------*/
